<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#9c9c9c"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/logotexto" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/TextoBienvenida"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        android:background="@color/white"
        style="@style/viewCorreoContraseña"
        android:layout_marginTop="36dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:background="@color/white"
            style="@style/viewCorreoContraseña"
            android:hint="Correo" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        android:background="@color/white"
        style="@style/viewCorreoContraseña"
        android:layout_marginTop="5dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/viewCorreoContraseña"
            android:background="@color/white"
            android:hint="Contraseña" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvIniciarSesion"
        style="@style/viewCustom"
        android:background="@color/azulusado"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:onClick="login"
        android:text="Iniciar Sesion"/>

    <TextView
        android:id="@+id/txtContraOlvidada"
        style="@style/viewCustom"
        android:onClick="forgotPassword"
        android:paddingTop="0dp"
        android:gravity="center_horizontal"
        android:text="¿Olvidaste tu Contraseña?"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/lyTerms"
        style="@style/viewCustom"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cbAcepto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leidoAcepto"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTerminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:onClick="goTerms"
            android:text="@string/terminosYcondiciones"
            android:textColor="@color/verdeLima"
            android:textSize="14sp"
            android:textStyle="bold" />
         </LinearLayout>

    <Button
        android:id="@+id/btSignGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/googleg_standard_color_18"
        android:text="@string/iniciar_con_google"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingLeft="30dp"/>

    <Button
        android:id="@+id/btSignFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/iniciar_con_facebook"
        android:drawableLeft="@drawable/facelogo"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingLeft="30dp"/>
</LinearLayout>
